[package]
name = "mesh_analyzer"
version = "0.2.0"
edition = "2021"
authors = ["Carlos Pinto <up201606191@up.pt>"]
publish = false

[dependencies]
libbpf-rs = "~0.17"
pcap = "~0.9"
signal-hook = "~0.3"
clap = { version = "~3", default-features = false, features = ["std", "suggestions"] }
libc = "~0.2"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
byteorder = "~1"

[build-dependencies]
libbpf-cargo = "~0.11"
bindgen = "~0.60"
